# faker-security

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  catalog-info.yaml  lint-requirements.txt  pyproject.toml  requirements.txt  setup.py
.circleci/: config.yml
.github/: CODEOWNERS
faker_security/: providers.py
tests/: conftest.py  test_providers.py
